--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,16 @@ body {
   background-color: #d9dcd6;
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+}
+
+/* header section/ box above picture  */
 .header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -15,16 +25,17 @@ body {
   background-color: #2a607c;
   color: #ffffff;
 }
-
+/* Company name not including letter " seo"  */
 .header h1 {
   display: inline-block;
   font-size: 48px;
 }
-
+/* letters seo in company name */
 .header h1 .seo {
   color: #d9dcd6;
 }
 
+/* section with search links */
 .header div {
   padding-top: 15px;
   margin-right: 20px;
@@ -32,7 +43,7 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
-
+/* links at top of page */
 .header div ul {
   list-style-type: none;
 }
@@ -41,16 +52,9 @@ body {
   display: inline-block;
   margin-left: 25px;
 }
+/*end header section*/
 
-a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-p {
-  font-size: 16px;
-}
-
+/*hero section*/
 .hero {
   height: 800px;
   width: 100%;
@@ -75,7 +79,7 @@ p {
   display: inline-block;
   margin-left: 20px;
 }
-
+/* container under picture to the right*/
 .benefits-container {
   margin-right: 20px;
   padding: 20px;
@@ -85,12 +89,10 @@ p {
   height: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
-}
-
-.benefits-container {
   margin-bottom: 32px;
   color: #ffffff;
 }
+/*container ends */
 
 .benefits h3 {
   margin-bottom: 10px;
@@ -102,6 +104,7 @@ p {
   margin: 10px auto;
   max-width: 150px;
 }
+/* feature boxes to the left */
 
 .features {
   margin-bottom: 20px;
@@ -120,6 +123,7 @@ p {
   margin-bottom: 20px;
   font-size: 36px;
 }
+/* foot seciton */
 
 .footer {
   padding: 30px;
